# ezGUI

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/ezgui/: common.h  context.h  window.h
include/ezgui/util/: linked_list.h
src/: CMakeLists.txt
src/util/: linked_list.c
